refactored marketdata persistence format to XML, added a first settlementTests